--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-ovh-ansible (2.2-1) unstable; urgency=medium
+
+  * Force retries on monitoring related methods
+
+ -- Aurelien Rougemont <arougemont@synthesio.net>  Wed, 13 Feb 2019 13:41:38 +0100
+
 python-ovh-ansible (2.1-1) unstable; urgency=medium
 
   *  Feature: Add a getMac function
