--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+python-ovh-ansible (3.0) unstable; urgency=medium
+
+  * Update to 3.0, rewrite of the module
+
+ -- Synthesio SRE Team <sre@synthesio.com>  Tue, 23 Dec 2019 15:37:41 +0000
+
+python-ovh-ansible (2.4) unstable; urgency=medium
+
+  * Update to 2.4
+
+ -- Synthesio SRE Team <sre@synthesio.com>  Tue, 18 Jun 2019 09:47:46 +0000
+
 python-ovh-ansible (2.3-1) unstable; urgency=medium
 
   * Fetch more info when check server installation status
